[tool.poetry]
name = "cpydemo"
version = "0.1.0"
description = "CircuitPython Demo Project"
authors = ["Tammy Cravit <tammy@tammymakesthings.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
circup = "^1.1.3"
Adafruit-Blinka = "^8.4.0"
blinka-displayio-pygamedisplay = "^1.0.0"
xattr = "^0.9.9"
pyserial = "^3.5"
pyusb = "^1.2.1"
discotool = "^0.5.2"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
black = "^22.8.0"
flake8 = "^5.0.4"

[tool.black]
target-version = ['py39']
line-length = 100
include = '\.pyi?$'
preview = false

[tool.isort]
py_version = 39
skip = [".gitignore"]
skip_gitignore = true
line_length = 100
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
use_parentheses = true
include_trailing_comma = true
force_alphabetical_sort_within_sections = true
group_by_package = true
case_sensitive = true
honor_noqa = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
